# uv-workspace-sample

./: .gitignore  README.md  pyproject.toml
tool-a/: pyproject.toml
tool-a/src/tool_a/: __init__.py
tool-b/: pyproject.toml
tool-b/src/tool_b/: __init__.py
