[project]
name = "tool-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroshi Sakate", email = "kumadasu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tool-a = "tool_a:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
