[project]
name = "tool-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroshi Sakate", email = "kumadasu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.1.0",
]

[project.scripts]
tool-b = "tool_b:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
